# quilt-core

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  fozzy.toml
.fozzy/: explore.trace.fozzy  fuzz.trace.fozzy  memory.graph.export.json  quilt-runtime.trace.fozzy  report.junit.xml
.fozzy/runs/00b49095-c68d-4762-aad4-37a840325353/: manifest.json  report.json
.fozzy/runs/00ee0af6-63ce-4d35-a499-a8e73adc2111/: manifest.json  report.json
.fozzy/runs/025ab60c-731d-4c6e-8a98-d542196a536b/: events.json  manifest.json  report.json
.fozzy/runs/04fd9d31-da85-4e89-aea8-ea2c3334b733/: coverage.json  manifest.json  memory.graph.json  memory.leaks.json  memory.timeline.json  report.json  timeline.json
.fozzy/runs/0799bc7b-443b-4cd6-b119-f368d89e17fe/: manifest.json  report.json
.fozzy/runs/085c7ec2-6a02-4c86-a81a-5f9568a6e7df/: manifest.json  report.json
.fozzy/runs/093a4fd2-12eb-47fa-bad2-dac305bdc76d/: manifest.json  report.json
.fozzy/runs/0b0984dd-2b60-46a4-84ad-ea0018c6db40/: manifest.json  report.json
.fozzy/runs/0df8ea01-f9f8-466f-afdc-023446930b26/: manifest.json  report.json
.fozzy/runs/0f35f274-5325-4447-92ba-326a3c0c6ca8/: manifest.json  report.json
.fozzy/runs/13b08d91-6c7c-4833-986e-88aa78797e2e/: manifest.json  report.json
.fozzy/runs/14a9aba0-f4a0-4ab5-b85b-d198f52abc03/: manifest.json  report.json
.fozzy/runs/16c89df8-669a-423f-a527-076287833939/: manifest.json  report.json
.fozzy/runs/16d29e21-36c0-42f9-abc7-260346941532/: manifest.json  report.json
.fozzy/runs/18dee501-60fd-4664-9624-c50951c910e8/: manifest.json  report.json
proto/: quilt.proto
scripts/: apply_storage_migration.sh  install-quilt.sh
src/: main.rs  main.rs.backup
src/cli/: icc.rs  interactive.rs  main.rs  mod.rs  shell.rs
src/daemon/: capacity.rs  cgroup.rs  fast_start.rs  manager.rs  metrics.rs  mod.rs  namespace.rs  pty.rs  readiness.rs  resource.rs  runtime.rs  seccomp.rs  server.rs  system.rs
src/grpc/: container_ops.rs  mod.rs  tests.rs  volume_ops.rs
src/icc/: dns.rs  messaging.rs  mod.rs
src/image/: config.rs  layers.rs  manifest.rs  mod.rs  reference.rs  store.rs
src/minit/: Cargo.toml  main.rs
src/registry/: auth.rs  client.rs  mod.rs
src/sync/: cleanup.rs  connection.rs  containers.rs  dns.rs  engine.rs  error.rs  events.rs  icc_connections.rs  images.rs  ipam.rs  master_containers.rs  metrics.rs  migrations.rs  mod.rs  monitor.rs  network.rs  nodes.rs  retry.rs  schema.rs  storage_monitor.rs  terminal_sessions.rs  volumes.rs  workloads.rs
src/usage/: aggregator.rs  events.rs  mod.rs  tracker.rs
src/utils/: command.rs  console.rs  constants.rs  filesystem.rs  logger.rs  mod.rs  process.rs  security.rs  server_manager.rs  validation.rs
tests/: test_pty_event_driven.sh
tests/fozzy/: api_contract.fuzz.explore.host.memory.fail.prod.fozzy.json  assertions.fozzy.json  claude_http_surface_profile.fuzz.explore.host.memory.fail.prod.fozzy.json  fail.fozzy.json  http.fozzy.json  kv.explore.fozzy.json  net.fozzy.json  scripts.fuzz.explore.host.memory.fail.prod.fozzy.json  src.fuzz.explore.host.memory.fail.prod.fozzy.json  timeout-det.fozzy.json
(+290 files in other folders)
