[package]
name = "quilt"
version = "0.1.0"
edition = "2021"
authors = ["Aria Compute Company"]
description = "Production container runtime with SQLite-based sync engine"
repository = "https://github.com/ariacomputecompany/quilt"
license = "MIT OR Apache-2.0"
keywords = ["container", "runtime", "namespaces", "cgroups", "linux"]
categories = ["development-tools", "virtualization"]
readme = "README.md"

# Lint configuration - deny all warnings
[lints.rust]
warnings = "deny"
dead_code = "deny"
unused_imports = "deny"

# Binary targets
[[bin]]
name = "quilt"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "minit"
path = "src/minit/main.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
nix = "0.26.1"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
axum = "0.7"
tower = "0.4"
# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
humantime = "2.1"
regex = "1.10"
anyhow = "1.0.75"
rtnetlink = "0.13.0"
netlink-packet-route = "0.17"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
scopeguard = "1.2"
inotify = "0.10"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
walkdir = "2.4"

# DNS server dependencies
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"

# Sync engine dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.8"

# Production release profile
[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Single codegen unit for better optimization
panic = "abort"            # Abort on panic for smaller binaries
strip = "symbols"          # Strip symbols for smaller binaries
debug = false              # No debug info in release

# Development profile (optimized for build speed and debugging)
[profile.dev]
opt-level = 0              # Fast compilation
debug = "line-tables-only" # Minimal debug info to avoid OOM
strip = "symbols"          # Reduce binary size
