[package]
name = "minit"
version = "1.0.0"
edition = "2021"
description = "Minimal init process for Quilt containers"

[[bin]]
name = "minit"
path = "main.rs"

[dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"

[profile.release]
opt-level = "z"    # Optimize for size
lto = true         # Link-time optimization
strip = true       # Strip symbols
codegen-units = 1  # Better optimization
panic = "abort"    # Smaller binary
